// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render with default props 1`] = `
<styled.h1
  color="#007acc"
  margin="medium"
  tag="h1"
  textAlign="center"
  truncate={false}
  upcase={false}
>
  Test
</styled.h1>
`;

exports[`<Heading /> should render with h2 props 1`] = `
<styled.h2
  color="#333"
  margin="none"
  tag="h2"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</styled.h2>
`;

exports[`<Heading /> should render with h3 props 1`] = `
<styled.h3
  color="#333"
  margin="none"
  tag="h3"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</styled.h3>
`;

exports[`<Heading /> should render with h4 props 1`] = `
<styled.h4
  color="#333"
  margin="none"
  tag="h4"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</styled.h4>
`;

exports[`<Heading /> should render with h5 props 1`] = `
<styled.h5
  color="#333"
  margin="none"
  tag="h5"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</styled.h5>
`;
